unpackaged/main/default/objects/Account/fields/Account_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_case_safe__c</fullName>
    <description>#primaryKey</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 character case insensitive version of this record&#39;s Salesforce ID</inlineHelpText>
    <label>Account ID (case safe)</label>
    <type>Text</type>
</CustomField>