unpackaged/main/default/objects/Account/fields/Account_Management_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Tier__c</fullName>
    <description>AMs are currently manually prioritizing their accounts (accounts with high potential, risky accounts, middle of the field, etc) in a spreadsheet.

Account management prioritization tiering. Current definitions: 
Tier 1 = High Potential
Tier 2 = Middle of the Field
Tier 3 = Risky Accounts
Tier 4 = Low Potential</description>
    <inlineHelpText>Account management prioritization tiering. Current definitions: 
Tier 1 = High Potential
Tier 2 = Middle of the Field
Tier 3 = Risky Accounts
Tier 4 = Low Potential</inlineHelpText>
    <label>Account Management Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>