unpackaged/main/default/objects/Account/fields/Account_Name_Compiled__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Compiled__c</fullName>
    <description>Returns the Account Name (Short), if it exists, otherwise returns the Account&#39;s name. Mapped to the `Natural Company Name` field in Outreach.

External Systems Utilization: Outreach</description>
    <formula>IF(ISBLANK(Account_Name_Short__c),Name,Account_Name_Short__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the Account Name (Short), if it exists, otherwise returns the Account&#39;s name.</inlineHelpText>
    <label>Account Name (Compiled)</label>
    <type>Text</type>
</CustomField>