unpackaged/main/default/objects/Account/fields/Account_Potential_End_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Potential_End_User_Count__c</fullName>
    <description>Number of potential Retool End Users at the Account.</description>
    <inlineHelpText>Number of potential Retool End Users at the Account.</inlineHelpText>
    <label>Account Potential: End User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>