unpackaged/main/default/objects/Account/fields/Account_Potential_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Account_Potential_Penetration__c</fullName>
    <description>ARR / Account Potential Total Spend.

External Systems Utilization: MadKudu</description>
    <formula>IF(Account_Potential_Total_Spend__c = 0 || ISBLANK(Account_Potential_Total_Spend__c),NULL,ARR__c/Account_Potential_Total_Spend__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ARR / Account Potential Total Spend</inlineHelpText>
    <label>Account Potential: Penetration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>