unpackaged/main/default/objects/Account/fields/Account_Potential_Standard_User_Spend__c.field-meta.xml
<CustomField>
    <fullName>Account_Potential_Standard_User_Spend__c</fullName>
    <description>Potential revenue equivalent based on the number of potential Retool Standard Users at the Account.</description>
    <inlineHelpText>Potential revenue equivalent based on the number of potential Retool Standard Users at the Account.</inlineHelpText>
    <label>Account Potential: Standard User Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>