unpackaged/main/default/objects/Account/fields/Account_Potential_Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>Account_Potential_Total_Spend__c</fullName>
    <description>Estimated total spend that the Account can allocate towards Retool.

External Systems Utilization: MadKudu</description>
    <inlineHelpText>Estimated total spend that the Account can allocate towards Retool.</inlineHelpText>
    <label>Account Potential: Total Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>