unpackaged/main/default/objects/Account/fields/Account_Status_All__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_All__c</fullName>
    <description>Displays the Account Status (Committed) and the Account Status (Self Service) field values combined.</description>
    <formula>&quot;Committed: &quot;&amp;Account_Status_Committed__c&amp;BR()&amp;
&quot;Self-Service: &quot;&amp;Account_Status_Self_Service__c&amp;BR()&amp;
&quot;Prospect: &quot;&amp; (TEXT(Account_Status_Prospect__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Account Status (Committed) and the Account Status (Self Service) field values combined.</inlineHelpText>
    <label>Account Status (All)</label>
    <type>Text</type>
</CustomField>