unpackaged/main/default/objects/Account/fields/Account_Status_Committed__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Committed__c</fullName>
    <description>The current status of this Account within the Committed business line.

Disqualified: DQ reason is not null
Active Customer: # of Committed BUs &gt; 0
Former Customer: # of Won Committed Opportunities &gt; 0
Prospect: # of Opportunities &gt; 0 
Unverified: Everything else</description>
    <formula>IF(
  NOT(ISPICKVAL(Disqualified_Reason__c,&quot;&quot;)),
  &quot;Disqualified&quot;,
  IF(
    Num_Active_Committed_BUs__c &gt; 0,
    &quot;Active Customer&quot;,
    IF(
      Num_Won_Committed_Opportunities__c &gt; 0,
      &quot;Former Customer&quot;,
      IF(
        Num_Opportunities__c &gt; 0,
        &quot;Prospect&quot;,
        &quot;Unverified&quot;
       )
     )
   )  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current status of this Account within the Committed business line.

Disqualified: DQ reason is not null
Active Customer: # of Committed BUs &gt; 0
Former Customer: # of Won Committed Opportunities &gt; 0
Prospect: # of Opportunities &gt; 0 
Unverified: Everything else</inlineHelpText>
    <label>Account Status (Committed)</label>
    <type>Text</type>
</CustomField>