unpackaged/main/default/objects/Account/fields/Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Team__c</fullName>
    <description>Concatenated string of the current Account Team members.</description>
    <inlineHelpText>Concatenated string of the current Account Team members.</inlineHelpText>
    <label>Account Team</label>
    <type>TextArea</type>
</CustomField>