unpackaged/main/default/objects/Account/fields/adroll__LastAdRollTrackingDate__c.field-meta.xml
<CustomField>
    <fullName>adroll__LastAdRollTrackingDate__c</fullName>
    <description>Latest Date of the Tracking Data Occurrence</description>
    <inlineHelpText>Latest Date of the Tracking Data Occurrence</inlineHelpText>
    <label>Last RollWorks Tracking Date(Deprecated)</label>
    <type>Date</type>
</CustomField>