unpackaged/main/default/objects/Account/fields/adroll__Page_Views__c.field-meta.xml
<CustomField>
    <fullName>adroll__Page_Views__c</fullName>
    <label>Page Views (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>