unpackaged/main/default/objects/Account/fields/adroll__RollWorks_Sourced__c.field-meta.xml
<CustomField>
    <fullName>adroll__RollWorks_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RollWorks Sourced</label>
    <type>Checkbox</type>
</CustomField>