unpackaged/main/default/objects/Account/fields/adroll__ViewConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ViewConversion__c</fullName>
    <description>Conversion Rate for Views</description>
    <inlineHelpText>Conversion Rate for Views</inlineHelpText>
    <label>View Conversion (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>