unpackaged/main/default/objects/Account/fields/Annualized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount__c</fullName>
    <description>The current total Annualized Revenue ((MRR * 12) + ARR) of all Business Units related to the Account. 

#revenue</description>
    <inlineHelpText>The current total Annualized Revenue ((MRR * 12) + ARR) of all Business Units related to the Account.</inlineHelpText>
    <label>Annualized Revenue (Committed)</label>
    <summarizedField>Business_Unit__c.Annualized_Amount__c</summarizedField>
    <summaryForeignKey>Business_Unit__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>