unpackaged/main/default/objects/Account/fields/Annualized_Revenue_All__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue_All__c</fullName>
    <formula>Annualized_Revenue_Self_Service__c + Annualized_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Revenue (All)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>