unpackaged/main/default/objects/Account/fields/Annualized_Revenue_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue_Self_Service__c</fullName>
    <description>Annualized Revenue from Self Service Business. Rollup from Business Unit records.

External Systems Utilization: MadKudu</description>
    <inlineHelpText>Annualized Revenue from Self Service Business.</inlineHelpText>
    <label>Annualized Revenue (Self Service)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>