unpackaged/main/default/objects/Account/fields/Automatically_Reparent_Entities__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Reparent_Entities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Reparent Entities?</label>
    <type>Checkbox</type>
</CustomField>