unpackaged/main/default/objects/Account/fields/AWS_Marketplace_Propensity_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_Propensity_to_Buy__c</fullName>
    <description>Propensity to buy through AWS Marketplace, ranging from `Low` to `Very High`.</description>
    <inlineHelpText>Propensity to buy through AWS Marketplace, ranging from `Low` to `Very High`.</inlineHelpText>
    <label>AWS Marketplace: Propensity to Buy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>