unpackaged/main/default/objects/Account/fields/Billing_Intermediate_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Intermediate_Region__c</fullName>
    <description>Please note that `Shipping Address` is our primary source of truth for our location data. 

Intermediate Region associated with the Biilling Address.</description>
    <inlineHelpText>Intermediate Region associated with the Biilling Address.</inlineHelpText>
    <label>Billing Intermediate Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Intermediate_Region</valueSetName>
    </valueSet>
</CustomField>