unpackaged/main/default/objects/Account/fields/Billing_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subregion__c</fullName>
    <description>Please note that `Shipping Address` is our primary source of truth for our location data.

Subregion associated with the Biilling Address.</description>
    <inlineHelpText>Subregion associated with the Biilling Address.</inlineHelpText>
    <label>Billing Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>