unpackaged/main/default/objects/Account/fields/bombora_data__Exclude_from_Bombora_Surge__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Exclude_from_Bombora_Surge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether Bombora will attempt to match data against the record or not</description>
    <label>Exclude from Bombora Surge</label>
    <type>Checkbox</type>
</CustomField>