unpackaged/main/default/objects/Account/fields/bombora_data__Is_Created_by_Bombora__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Is_Created_by_Bombora__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if record was created through Bombora&#39;s Account Creaton feature</description>
    <label>Is Created by Bombora</label>
    <type>Checkbox</type>
</CustomField>