unpackaged/main/default/objects/Account/fields/bombora_data__Strongest_Cluster_Topic_Count__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Strongest_Cluster_Topic_Count__c</fullName>
    <description>This will show the topic count of the cluster that has the most intent activity on a given Account and can be used in routing records into workflows based on the cluster.</description>
    <inlineHelpText>The topic count of the cluster identified in the “Strongest Intent Cluster” field</inlineHelpText>
    <label>Strongest Cluster - Topic Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>