unpackaged/main/default/objects/Account/fields/bombora_data__Topic_Count_Summary__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Topic_Count_Summary__c</fullName>
    <description>Shows the number of topics, across all clusters, that a given Account is showing intent on and can be used to prioritize outreach. Higher topic count = more active research observed by Bombora.</description>
    <inlineHelpText>The number of topics from the list of selected topics for which the business is spiking on across all clusters</inlineHelpText>
    <label>Topic Count Summary</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>