unpackaged/main/default/objects/Account/fields/Brand_Use_Status__c.field-meta.xml
<CustomField>
    <fullName>Brand_Use_Status__c</fullName>
    <description>Used to identify whether or not we are permitted to use the customer&#39;s brand in marketing materials/promotions.</description>
    <inlineHelpText>Used to identify whether or not we are permitted to use the customer&#39;s brand in marketing materials/promotions.</inlineHelpText>
    <label>Brand Use Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Allowed with permission</fullName>
            </value>
            <value>
                <fullName>Not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>