unpackaged/main/default/objects/Account/fields/ChampifyIo__cleanName__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__cleanName__c</fullName>
    <formula>/* AUTOGENERATED, DO NOT EDIT */TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(IF(CONTAINS(IF(CONTAINS(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name),&#39; - &#39;), LEFT(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name), FIND(&#39; - &#39;,IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name)) - 1),IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name)),&#39;,&#39;), LEFT(IF(CONTAINS(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name),&#39; - &#39;), LEFT(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name), FIND(&#39; - &#39;,IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name)) - 1),IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name)), FIND(&#39;,&#39;,IF(CONTAINS(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name),&#39; - &#39;), LEFT(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name), FIND(&#39; - &#39;,IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name)) - 1),IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name))) - 1),IF(CONTAINS(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name),&#39; - &#39;), LEFT(IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name), FIND(&#39; - &#39;,IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name)) - 1),IF(CONTAINS(Name,&#39;(&#39;), LEFT(Name, FIND(&#39;(&#39;,Name) - 1),Name)))), &#39; incorporated&#39;, &#39;&#39;), &#39; corporation&#39;, &#39;&#39;), &#39; limited&#39;, &#39;&#39;), &#39; corp.&#39;, &#39;&#39;), &#39; corp&#39;, &#39;&#39;), &#39; gmbh&#39;, &#39;&#39;), &#39; inc.&#39;, &#39;&#39;), &#39; ltd.&#39;, &#39;&#39;), &#39; inc&#39;, &#39;&#39;), &#39; llc&#39;, &#39;&#39;), &#39; ltd&#39;, &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Champify Clean Account Name</label>
    <type>Text</type>
</CustomField>