unpackaged/main/default/objects/Account/fields/ChampifyIo__CleanWebsite__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__CleanWebsite__c</fullName>
    <formula>IF(CONTAINS(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,&#39;https://&#39;,&#39;&#39;),&#39;http://&#39;,&#39;&#39;),&#39;www.&#39;,&#39;&#39;),&#39;/&#39;),LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,&#39;https://&#39;,&#39;&#39;),&#39;http://&#39;,&#39;&#39;),&#39;www.&#39;,&#39;&#39;),FIND(&#39;/&#39;,SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,&#39;https://&#39;,&#39;&#39;),&#39;http://&#39;,&#39;&#39;),&#39;www.&#39;,&#39;&#39;))-1),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,&#39;https://&#39;,&#39;&#39;),&#39;http://&#39;,&#39;&#39;),&#39;www.&#39;,&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Champify Clean Website</label>
    <type>Text</type>
</CustomField>