unpackaged/main/default/objects/Account/fields/ChampifyIo__Is_Champify__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Is_Champify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Champify</label>
    <type>Checkbox</type>
</CustomField>