unpackaged/main/default/objects/Account/fields/ChampifyIo__LinkedInURL__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__LinkedInURL__c</fullName>
    <label>Champify LinkedIn URL</label>
    <type>Url</type>
</CustomField>