unpackaged/main/default/objects/Account/fields/Cognism_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Last_Updated_Date__c</fullName>
    <description>Most recent date of when an Account record was last updated by Cognism.

External Systems Utilization: Cognism</description>
    <inlineHelpText>Most recent date of when an Account record was last updated by Cognism.</inlineHelpText>
    <label>Cognism: Last Updated Date</label>
    <type>Date</type>
</CustomField>