unpackaged/main/default/objects/Account/fields/Company_Cognism_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_Cognism_ID__c</fullName>
    <description>Cognism ID for Account records enriched by Cognism.</description>
    <inlineHelpText>Cognism ID for Account records enriched by Cognism.</inlineHelpText>
    <label>Company Cognism ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>