unpackaged/main/default/objects/Account/fields/Company_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo_URL__c</fullName>
    <description>Company logo url mapped from Clearbit.</description>
    <label>Company Logo URL</label>
    <type>Url</type>
</CustomField>