unpackaged/main/default/objects/Account/fields/Country_Definition__c.field-meta.xml
<CustomField>
    <fullName>Country_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the associated Country definition record related to Shipping Country. Country definitions consist of geographical meta data (i.e. Region, Subregion, Territory, Business Status etc..)</description>
    <inlineHelpText>Link to the associated Country definition record related to Shipping Country.</inlineHelpText>
    <label>Country Definition (Shipping)</label>
    <referenceTo>Country_Definition__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>