unpackaged/main/default/objects/Account/fields/Customer_Success_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Tier__c</fullName>
    <description>Link to documentation: https://docs.google.com/presentation/d/1Ebl47gAdFlq_bFJghzbjNRd75BBGywkQ6POsuRhdJso/edit#slide=id.g257fa631d3e_0_94</description>
    <inlineHelpText>Link to documentation: https://docs.google.com/presentation/d/1Ebl47gAdFlq_bFJghzbjNRd75BBGywkQ6POsuRhdJso/edit#slide=id.g257fa631d3e_0_94</inlineHelpText>
    <label>Customer Success Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Success_Tiers</valueSetName>
    </valueSet>
</CustomField>