unpackaged/main/default/objects/Account/fields/Days_Since_Last_ROE_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_ROE_Activity__c</fullName>
    <description>Number of days between today and the `Most Recent Sales Activity` date stamp, or the number of days the Account has been owned if there hasn&#39;t been any activity yet.</description>
    <formula>IF(ISBLANK(Most_Recent_Sales_Activity__c),Owned_Days__c,TODAY()-Most_Recent_Sales_Activity__c)</formula>
    <inlineHelpText>Number of days between today and the `Most Recent Sales Activity` date stamp, or the number of days the Account has been owned if there hasn&#39;t been any activity yet.</inlineHelpText>
    <label>Days Since Last Sales ROE Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>