unpackaged/main/default/objects/Account/fields/Days_Since_Last_SDR_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_SDR_Activity__c</fullName>
    <description>Number of days between today and the `Most Recent SDR Activity` date stamp.

External Systems Utilization: LeanData; Chili Piper</description>
    <formula>TODAY()-Most_Recent_SDR_Activity__c</formula>
    <inlineHelpText>Number of days between today and the `Most Recent SDR Activity` date stamp.</inlineHelpText>
    <label>Days Since Last SDR Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>