unpackaged/main/default/objects/Account/fields/Deal_Control_SQOs_With_Late_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Deal_Control_SQOs_With_Late_Renewals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin field used to override validation rules that prevent a rep from SQO&#39;ing new Opportunities.</description>
    <inlineHelpText>Admin field used to override validation rules that prevent a rep from SQO&#39;ing new Opportunities.</inlineHelpText>
    <label>Deal Control: SQOs With Late Renewals</label>
    <type>Checkbox</type>
</CustomField>