unpackaged/main/default/objects/Account/fields/Disconnect_New_Customer_Success_Tier__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_New_Customer_Success_Tier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disconnects `New Customer Success Tier` from Account if checked true.</description>
    <inlineHelpText>Disconnects `New Customer Success Tier` from Account if checked true.</inlineHelpText>
    <label>Disconnect New Customer Success Tier?</label>
    <type>Checkbox</type>
</CustomField>