unpackaged/main/default/objects/Account/fields/Disconnect_New_SDR__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_New_SDR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disconnects `New SDR` from Account if checked true.</description>
    <inlineHelpText>Disconnects `New SDR` from Account if checked true.</inlineHelpText>
    <label>Disconnect New SDR?</label>
    <type>Checkbox</type>
</CustomField>