unpackaged/main/default/objects/Account/fields/Disconnect_New_TAM__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_New_TAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disconnects `New TAM` from Account if checked true.</description>
    <inlineHelpText>Disconnects `New TAM` from Account if checked true.</inlineHelpText>
    <label>Disconnect New TAM?</label>
    <type>Checkbox</type>
</CustomField>