unpackaged/main/default/objects/Account/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>If set, the reason why the Account has been disqualified for sale by Retool.</description>
    <inlineHelpText>If set, the reason why the Account has been disqualified for sale by Retool.</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Sell</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Defunct</fullName>
            </value>
            <value>
                <fullName>Sanctioned Country</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>