unpackaged/main/default/objects/Account/fields/Disqualified_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason_Details__c</fullName>
    <description>Additional context for why the Account has been disqualified for sale by Retool.</description>
    <inlineHelpText>Additional context for why the Account has been disqualified for sale by Retool.</inlineHelpText>
    <label>Disqualified Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>