unpackaged/main/default/objects/Account/fields/DOZISF__ZoomInfo_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
    <description>Date and time when the record was last created or updated by ZoomInfo</description>
    <label>ZoomInfo Last Updated</label>
    <type>DateTime</type>
</CustomField>