unpackaged/main/default/objects/Account/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Retool executive responsible for engaging with senior influences, buyers or decision makers at the Account.</description>
    <inlineHelpText>Name of the Retool executive responsible for engaging with senior influences, buyers or decision makers at the Account.</inlineHelpText>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>