unpackaged/main/default/objects/Account/fields/Harmonic_Match_Issue__c.field-meta.xml
<CustomField>
    <fullName>Harmonic_Match_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE if an Account record is matched incorrectly with a Harmonic Company Profile record and is flagged for review.</description>
    <inlineHelpText>Checked TRUE if an Account record is matched incorrectly with a Harmonic Company Profile record and is flagged for review.</inlineHelpText>
    <label>Harmonic Match Issue?</label>
    <type>Checkbox</type>
</CustomField>