unpackaged/main/default/objects/Account/fields/Harmonic_Match_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Harmonic_Match_Issue_Type__c</fullName>
    <description>Used to categorize the type of Harmonic Match issue that has been reported.</description>
    <inlineHelpText>Used to categorize the type of Harmonic Match issue that has been reported.</inlineHelpText>
    <label>Harmonic Match Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary website is incorrect</fullName>
            </value>
            <value>
                <fullName>Headcount is incorrect</fullName>
            </value>
            <value>
                <fullName>Location is incorrect</fullName>
            </value>
            <value>
                <fullName>Correct company with incorrect info</fullName>
            </value>
            <value>
                <fullName>Entirely wrong company</fullName>
            </value>
            <value>
                <fullName>Harmonic domain mismatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>